# nixos-gen-config

./: .gitignore  flake.nix  pyproject.toml
nixos_gen_config/: __main__.py  main.py
src/nixos_gen_config/: __main__.py  arguments.py  auxiliary_functions.py  classes.py  generate_hw_config.py  generate_nixos_config.py  hardware.py  main.py  partitions.py  write_config.py
src/stubs/nixos_gen_config/: arguments.pyi  auxiliary_functions.pyi  classes.pyi  generate_hw_config.pyi  hardware.pyi  main.pyi  partitions.pyi
tests/: conftest.py  test_auxilliary_functions.py  test_class.py  test_hardware.py  test_hardware_pci.py
tests/assets/: available_governors  cpu_info_amd  cpu_info_intel
