[tool.poetry]
name = "nixos_gen_config"
version = "0.1.0"
description = ""
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = "^0.22.0"
icecream = "^2.1.1"

#[tool.poetry.dev-dependencies]
#black = "^21.12b0"
#flake8 = "^4.0.1"
psutil = "^5.9.0"
#mypy = "^0.930"

[tool.poetry.scripts]
nixos-gen-config = 'nixos_gen_config.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39']

[[tool.mypy.overrides]]
module = [
    "setuptools",
    "pyudev",
    "icecream",
    "psutil"
]
ignore_missing_imports = true

[tool.pyright]
#strict = ['*']
typeCheckingMode = ['basic']

[tool.pylint]

[tool.pylint.FORMAT]
max-line-length = 130
disable = [ 'C0114', 'C0115', 'C0116' ]
#    C0114 (missing-module-docstring)
#    C0115 (missing-class-docstring)
#    C0116 (missing-function-docstring)

[tool.pylint.DESIGN]
max-attributes = 12
