[tool.poetry]
name = "nixos_gen_config"
version = "0.1.0"
description = ""
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = "^0.22.0"
icecream = "^2.1.1"
psutil = "^5.9.0"

[tool.poetry.scripts]
nixos-gen-config = 'nixos_gen_config.main:main'

[tool.poetry.dev-dependencies]
types-psutil = "^5.8.17"
types-setuptools = "^57.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39']

[[tool.mypy.overrides]]
module = [
    "pyudev",
    "icecream",
]
ignore_missing_imports = true

[mypy]
#warn_redundant_casts = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#no_implicit_optional = true
strict = true

[tool.pyright]
strict = ['*']
#typeCheckingMode = ['basic']

[tool.pylint]

[tool.pylint.FORMAT]
max-line-length = 130
disable = [ 'C0114', 'C0115', 'C0116' ]
#    C0114 (missing-module-docstring)
#    C0115 (missing-class-docstring)
#    C0116 (missing-function-docstring)

[tool.pylint.DESIGN]
max-attributes = 12
