[tool.poetry]
name = "nixos_gen_config"
version = "0.1.0"
description = ""
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = "^0.22.0"
icecream = "^2.1.1"
psutil = "^5.9.0"

[tool.poetry.scripts]
nixos-gen-config = 'nixos_gen_config.main:main'

[tool.poetry.dev-dependencies]
types-psutil = "^5.8.17"
types-setuptools = "^57.4.5"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.2"}
pytest-randomly = "^3.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py310']

[[tool.mypy.overrides]]
module = [
    "pyudev",
    "icecream",
]
ignore_missing_imports = true

[tool.mypy]
strict = true

[tool.pyright]
# using pylint & mypy via null-ls so not needed
typeCheckingMode = "off"
reportUndefinedVariable = "none"

[tool.pylint.master]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.basic]
# Allow shorter and longer variable names than the default.
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 130

[tool.pylint.DESIGN]
max-attributes = 12

[tool.pylint.messages_control]
disable = [
    # Many functions (e.g. callbacks) will naturally have unused arguments.
    "unused-argument",

    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    "missing-docstring"
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["nixos_gen_config"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
# tests, src so that the nix shell doesn't have to be restarted
testpaths = ["tests", "src"]
addopts = "-sv"
